<resources>
    <string name="app_name">AKBasic Journal</string>
    <string name="str_login_login">Login</string>
    <string name="str_login_locked">Diary is locked</string>
    <string name="str_login_password">Please Enter you password to continue.</string>
    <string name="str_login_incorrect_password">Password is incorrect.\nPlease try again</string>
    <string name="str_login_password_hint">Password</string>
    <string name="str_set_password_err_match">Passwords don\'t match.\nPlease try again.</string>
    <string name="str_set_password_characters">Password must be longer\nthan 6 characters.</string>
    <string name="str_entry_yesterday_desc">Previous entry.</string>
    <string name="str_entry_calendar_desc">Drop down calendar selector.</string>
    <string name="str_entry_tomorrow_desc">Next entry.</string>
    <string name="str_entry_entry_hint">New entry.</string>
    <string name="str_set_password_cancel">Cancel</string>
    <string name="str_set_password_set">Set</string>
    <string name="str_set_password_set_password">This application needs a password.\nPlease set your password below.</string>
    <string name="str_login_lock_image_desc">Lock image</string>
    <string name="str_reset_password_reset_password">Please fill in the text boxes below to reset your password.</string>
    <string name="str_reset_password_current_password">Current Password:</string>
    <string name="str_reset_password_new_password">New Password:</string>
    <string name="str_reset_password_confirm">Confirm Password:</string>
    <string name="str_reset_password_confirm_button">Reset</string>
    <string name="str_reset_password_cancel_button">Cancel</string>
    <string name="str_about_by_author">Developed by: Adam Brooke</string>
    <string name="str_ok">OK</string>
    <string name="str_about_version">Version: 1.00</string>
    <string name="str_license_text">License:\n\nThis application is released under the MIT License.\nCopyright © 2022 Adam Brooke\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="str_about_extra">This application is free and contains no ads. If you find it useful, I\'d appreciate a donation:\n\nPayPal:\nakbasicapps@gmail.com\n\nAlso check out any other apps on my GitHub repo:\nhttp://www.github.com/chineapplepunks\n\nIf you encounter any bugs, or have any suggestions for improvements, please email me at:\nakbasicapp@gmail.com</string>
    <string name="app_label">Journal</string>
    <string name="str_menu_undo">Undo</string>
    <string name="str_menu_redo">Redo</string>
    <string name="str_menu_save">Save</string>
    <string name="str_menu_delete">Delete</string>
    <string name="str_menu_settings">Settings</string>
    <string name="str_menu_about">About</string>
    <string name="str_font_heading">Please select your font size:</string>
    <string name="str_license_third_party">Third-party\nlicenses</string>
    <string name="str_set_value">Set</string>
    <string-array name="pref_font_size">
        <item>Small</item>
        <item>Normal</item>
        <item>Big</item>
    </string-array>

    <string-array name="pref_font_value">
        <item>12</item>
        <item>16</item>
        <item>20</item>
    </string-array>
</resources>