<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:background="?attr/colorPrimary"
                android:layout_height="48dp"
                android:layout_width="match_parent"
                android:id="@+id/materialToolbar2"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="Diary Entry" />

            <com.google.android.material.appbar.MaterialToolbar
                android:background="?attr/colorPrimary"
                android:layout_height="32dp"
                android:layout_width="match_parent"
                android:id="@+id/materialToolbar"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialToolbar2" />

            <ImageButton
                style="@style/Button"
                android:backgroundTint="?attr/colorPrimary"
                app:tint="?attr/colorOnPrimary"
                android:id="@+id/btn_prev"
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/str_entry_yesterday_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/materialToolbar"
                app:srcCompat="@drawable/ic_prev_black" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/materialToolbar">

                <TextView
                    android:textColor="?attr/colorOnPrimary"
                    android:id="@+id/lbl_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text=""
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/btn_cal" />

                <ImageButton
                    style="@style/Button"
                    android:backgroundTint="?attr/colorPrimary"
                    app:tint="?attr/colorOnPrimary"
                    android:id="@+id/btn_cal"
                    android:layout_width="48dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:backgroundTintMode="src_in"
                    android:contentDescription="@string/str_entry_calendar_desc"
                    app:layout_constraintStart_toEndOf="@id/lbl_date"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_expand_black" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageButton
                style="@style/Button"
                android:backgroundTint="?attr/colorPrimary"
                app:tint="?attr/colorOnPrimary"
                android:id="@+id/btn_next"
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/str_entry_tomorrow_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/materialToolbar"
                app:srcCompat="@drawable/ic_next_black" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyt_cal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="gone">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyt_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyt_cal"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnPrimary"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="start|top"
                    android:hint="@string/str_entry_entry_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/lyt_coordinator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
